eks-gitops/helm/value-store/istio-gw/istio-internal-gateways.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway-internal-dev
  namespace: default
spec:
  selector:
    istio: internal-dev
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
